--- a/index.html
+++ b/index.html
@@ -5,25 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/ca1e3d4b6d.js" crossorigin="anonymous"></script>
     <title></title>
   </head>
-  <body>
-    <header>
-      <div class="container">
-        <h1>Awesome Startup Employee Directory</h1>
+    <body>
+      <div class="overlay">
+        <i class="fas fa-chevron-right"></i>
+        <i class="fas fa-chevron-left"></i>
+        <div class="overlay-card">
+          <i class="fas fa-times"></i>
+          <div class="overlay-top">
+            <img src="https://randomuser.me/api/portraits/women/17.jpg" class ="overlay-profile-image" alt="">
+            <h2 class="name">First Last</h2>
+            <p class="email">example@example.com</p>
+            <p class="city">Houston</p>
+          </div>
+          <div class="overlay-bottom">
+            <p class="phone">(555) 555-5555</p>
+            <p class="birthday">01/01/1993</p>
+          </div>
+        </div>
       </div>
-    </header>
-    <main>
-      <div class="cards-container container">
+      <div class="content">
+        <header>
+          <div class="container">
+            <h1>Awesome Startup Employee Directory</h1>
+          </div>
+        </header>
+        <main>
+          <div class="cards-container container">
 
+          </div>
+        </main>
+        <footer>
+          <div class="copy container">
+            <p class="footer-text">&copy Copyright <span id="year"></span> | In Collaboration With Parker Studios Design</p>
+          </div>
+        </footer>
+      <script src="js/app.js"></script>
       </div>
-    </main>
-    <footer>
-      <div class="copy container">
-        <p class="footer-text">&copy Copyright <span id="year"></span> | In Collaboration With Parker Studios Design</p>
-      </div>
-    </footer>
-    <script src="js/app.js"></script>
-  </body>
+    </body>
 </html>
