--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1>Awesome Startup Employee Directory</h1>
           </div>
           <div class="container search">
-            <input type="text" name="search" id="search" placeholder="Search Employees...">
+            <input type="text" name="search" id="search" onkeyup="getUserSearch()" placeholder="Search Employees...">
             <i class="fas fa-search"></i>
           </div>
         </header>
