--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/ca1e3d4b6d.js" crossorigin="anonymous"></script>
-    <title></title>
+    <title>Awesome Startup Employee Directory</title>
   </head>
     <body>
       <div class="overlay">
@@ -37,7 +37,7 @@
         </main>
         <footer>
           <div class="copy container">
-            <p class="footer-text">&copy Copyright <span id="year"></span> | In Collaboration With Parker Studios Design</p>
+            <p class="footer-text">&copy; Copyright <span id="year"></span> | In Collaboration With Parker Studios Design</p>
           </div>
         </footer>
       <script src="js/app.js"></script>
